# dotfiles

./: .gitignore  AGENTS.md  LICENSE  Readme.md  alacrity-config.nix  apply-system.sh  apply-user.sh  flake.nix  home.nix  i3-config.nix  polybar-config.nix  update-system.sh  update-user.sh  xmonad.hs
.secrets/: aws_config  config.ovpn  env-vars.sh  nvim-sqls-config.yml  test.txt
alacritty/: config.nix
bmc/: bmc.py  pyproject.toml
colorschemes/: dracula.nix  onedark.nix  tokyonight.nix  utils.nix
custom-programs/browser-media-control/: bmc.py  default.nix  flake.nix  setup.cfg
custom-programs/taffybar/: default.nix  flake.nix  taffybar.css
custom-programs/weather-cli/: default.nix  flake.nix  weather.py
hosts/srt-l02-sekhmet/: home.nix
hosts/srt-n01-rivendell/: configuration.nix  home.nix  (+1 more)
i3/: config.nix  keybindings.nix
modules/: cli.nix  desktop-environment.nix  env.nix  fonts.nix  hashistack.nix  homebrew.nix  mac-symlink-applications.nix  media.nix  programming.nix
nvim/: airline.vim  coc-settings.json  coc.vim  colors.lua  lsp.lua  navigation.vim  plugins.nix  sane_defaults.vim  statusline.lua  telescope.lua  terminal.vim  theme.vim  treesitter.lua  which_key.vim
polybar/: accented-pills.nix
rofi/: grid.rasi  sysmenu.rasi
system/: configuration.nix  flake.nix  hardware-configuration.nix  openrgb.rules
systray/: volumeicon.cfg
users/: flake.nix
users/modules/desktop-environment/taffybar/: cabal.project  flake.nix  my-taffybar.cabal  taffybar.css  taffybar.hs
xmonad/: config.hs
zsh/: aliases.nix  functions.zsh  session_variables.zsh
(+352 files in other folders)
