[tool.poetry]
name = "bmc"
version = "0.1.0"
description = ""
authors = ["Sherub Thakur <sherub.thakur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydbus = "^0.6.0"
PyGObject = "^3.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
