name:                my-taffybar
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable custom-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , gi-gtk
                     , text
                     , taffybar
                     , process
                     , X11>=1.8
  default-language:    Haskell2010
